Fix content overflow on IE

--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -36,6 +36,13 @@ input[type="text"] {
     border: none;
 }
 
+.base-form__legend {
+    width: 100%;
+    padding: 0;
+    font-family: $header-font-family;
+    font-size: $subheader-font-size;
+}
+
 .-enlarge {
     font-size: 36px;
     margin-bottom: 4rem;
@@ -44,12 +51,6 @@ input[type="text"] {
         font-size: $subheader-font-size;
         font-family: $body-font-family;
     }
-}
-
-.base-form__legend {
-    padding: 0;
-    font-family: $header-font-family;
-    font-size: $subheader-font-size;
 }
 
 .base-form__label {
